syntax = "proto3";
package proto;


message InitRequest {
    bytes config = 1;
    uint32 log_server = 2;
}

message InvokeMessage {
    bytes body = 1;
    map<string, bool> attributes = 2;
}

message Empty {}

message LogRequest {
    string message = 1;
}

service Action {
    rpc Init(InitRequest) returns (Empty);
    rpc Invoke(InvokeMessage) returns (InvokeMessage);
}

service LogHelper {
    rpc Printf(LogRequest) returns (Empty);
    rpc Fatalf(LogRequest) returns (Empty);
    rpc Panicf(LogRequest) returns (Empty);
    rpc Debugf(LogRequest) returns (Empty);
    rpc Warnf(LogRequest)  returns (Empty);
    rpc Errorf(LogRequest) returns (Empty);
}
